--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,11 @@ div label input {
 body {
     font-family:sans-serif;
 }
-
-#gi-btn{
+.delivery-type-container{
+    position: relative;
+    top: 10px;
+}
+#gf-btn{
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -26,19 +29,19 @@ body {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
-#pi-btn,#gi-btn {
+#pi-btn,#gi-btn,#gf-btn {
     background-color:#EFEFEF;
     border:1px solid #D0D0D0;
     overflow:auto;
     float:left;
 }
-#pi-btn label,#gi-btn label{
+#pi-btn label,#gi-btn label,#gf-btn label{
     float:left;
     width:4.0em;
     margin-bottom: 0px;
 }
 
-#pi-btn label span,#gi-btn label span {
+#pi-btn label span,#gi-btn label span,#gf-btn label span {
     text-align:center;
     padding:3px 0px;
     display:block;
@@ -47,12 +50,13 @@ body {
     margin: 8px;
 }
 
-#pi-btn label input,#gi-btn label input {
+#pi-btn label input,#gi-btn label input,#gf-btn label input {
     position:absolute;
     top:-20px;
+    visibility: hidden;
 }
 
-#pi-btn input:checked + span,#gi-btn input:checked + span {
+#pi-btn input:checked + span,#gi-btn input:checked + span,#gf-btn input:checked + span {
     background-color:#777;
     color:#fff;
 }
